# skanpage

./: .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  config-skanpage.h.in  org.kde.skanpage.appdata.xml  org.kde.skanpage.desktop  skanpage.categories  snapcraft.yaml
autotests/: CMakeLists.txt  documentSaverTest.cpp  testconfig.h.in
autotests/images/: pages1-8.odt  test300.jpg.license  testOCRSans.odt  testOCRSerif.odt
cmake/: FindLeptonica.cmake  FindTesseract.cmake
icons/: CMakeLists.txt
po/ar/: skanpage.po
po/ast/: skanpage.po
po/az/: skanpage.po
po/be/: skanpage.po
po/bg/: skanpage.po
po/ca/: skanpage.po
po/ca@valencia/: skanpage.po
po/cs/: skanpage.po
po/de/: skanpage.po
po/el/: skanpage.po
po/en_GB/: skanpage.po
po/eo/: skanpage.po
po/es/: skanpage.po
po/eu/: skanpage.po
po/fi/: skanpage.po
po/fr/: skanpage.po
po/ga/: skanpage.po
po/gl/: skanpage.po
po/he/: skanpage.po
po/hi/: skanpage.po
po/hu/: skanpage.po
po/ia/: skanpage.po
po/id/: skanpage.po
po/is/: skanpage.po
po/it/: skanpage.po
po/ja/: skanpage.po
po/ka/: skanpage.po
po/ko/: skanpage.po
po/lt/: skanpage.po
po/lv/: skanpage.po
po/nb/: skanpage.po
po/nl/: skanpage.po
po/pa/: skanpage.po
po/pl/: skanpage.po
po/pt/: skanpage.po
po/pt_BR/: skanpage.po
po/ro/: skanpage.po
po/ru/: skanpage.po
po/sa/: skanpage.po
po/sk/: skanpage.po
po/sl/: skanpage.po
po/sv/: skanpage.po
po/tr/: skanpage.po
po/ug/: skanpage.po
po/uk/: skanpage.po
po/zh_CN/: skanpage.po
po/zh_TW/: skanpage.po
src/: CMakeLists.txt  DevicesModel.cpp  DevicesModel.h  DevicesView.qml  Document.qml  DocumentList.qml  DocumentModel.cpp  DocumentModel.h  DocumentPage.qml  DocumentPrinter.cpp  DocumentPrinter.h  DocumentSaver.cpp  DocumentSaver.h  DocumentView.qml  DoubleSpinBoxWithSuffix.qml  FilteredOptionsModel.cpp  FilteredOptionsModel.h  FormatModel.cpp  FormatModel.h  ImageImport.cpp  ImageImport.h  InProgressPainter.cpp  InProgressPainter.h  IntegerSpinBoxWithSuffix.qml  MainWindow.qml  Messages.sh  NameTemplateUtils.cpp  NameTemplateUtils.h  OCREngine.cpp  OCREngine.h  OCRLanguageModel.cpp  OCRLanguageModel.h  OptionDelegate.qml  OptionsModel.cpp  OptionsModel.h  OptionsWindow.qml  SaveDialog.qml  SaveFileDialog.cpp  SaveFileDialog.h  SingleOption.cpp  (+14 more)
src/qml/: ContentView.qml  DeviceSelection.qml  DevicesLoading.qml  DevicesView.qml  DocumentList.qml  DocumentPage.qml  DocumentView.qml  DoubleSpinBoxWithSuffix.qml  ExportDialog.qml  ExportWindow.qml  GlobalMenu.qml  InProgressPage.qml  IntegerSpinBoxWithSuffix.qml  MainWindow.qml  OptionDelegate.qml  OptionsPanel.qml  OptionsWindow.qml  PreviewScanView.qml  SettingsWindow.qml  ShareDialog.qml  ShareWindow.qml  ShortcutsAction.qml
